--- a/index.html
+++ b/index.html
@@ -10,7 +10,42 @@
 </head>
 
 <body>
-
+    <section class="container model-I">
+        <h1>Grid Model I</h1>
+        <div class="row">
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
