--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-
+    <section class="container model-II">
+        <h1>Grid Model II</h1>
+        <div class="row">
+            <div class="col-12">
+                <div class="big-square dark-gray"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="small-square light-gray"></div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
