--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 </head>
 
 <body>
-
+    <section class="container model-II">
+        <h1>Grid Model III</h1>
+        <div class="row">
+            <div class="col-8">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 small-square"></div>
+        </div>
+        <div class="row">
+            <div class="col-8">
+                <div class="small-square"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square light-gray"></div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
