--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="container model-I">
+    <section class="container">
         <h1>Grid Model I</h1>
         <div class="row">
             <div class="col-4">
