--- a/index.html
+++ b/index.html
@@ -11,64 +11,63 @@
 
 <body>
     <section class="container">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
         <h1>Grid Model I</h1>
         <div class="row">
             <div class="col-4">
-=======
-        <h1>Grid Model III</h1>
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-8">
->>>>>>> Grid-III
+            <div class="col-4">
                 <div class="small-square dark-gray"></div>
             </div>
             <div class="col-4">
                 <div class="small-square dark-gray"></div>
             </div>
-<<<<<<< HEAD
             <div class="col-4">
                 <div class="small-square dark-gray"></div>
-=======
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
+        </div>
+    </section>
+	<section class="container">
         <h1>Grid Model II</h1>
         <div class="row">
             <div class="col-12">
                 <div class="big-square dark-gray"></div>
->>>>>>> Grid-II
             </div>
         </div>
         <div class="row">
             <div class="col-4">
-<<<<<<< HEAD
-                <div class="small-square dark-gray"></div>
-            </div>
-            <div class="col-4">
-                <div class="small-square dark-gray"></div>
-            </div>
-            <div class="col-4">
-=======
-        <h1>Grid Model IV</h1>
-        <div class="row">
-            <div class="col-12">
->>>>>>> Grid-IV
-                <div class="small-square dark-gray"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-4">
-<<<<<<< HEAD
-                <div class="small-square dark-gray"></div>
-            </div>
-            <div class="col-4">
-                <div class="small-square dark-gray"></div>
-            </div>
-            <div class="col-4">
-                <div class="small-square dark-gray"></div>
-=======
                 <div class="small-square light-gray"></div>
->>>>>>> Grid-II
-=======
+            </div>
+        </div>
+    </section>
+	<section class="container">
+        <h1>Grid Model III</h1>
+        <div class="row">
+            <div class="col-8">
+                <div class="small-square dark-gray"></div>
+            </div>
+            <div class="col-4">
+                <div class="small-square dark-gray"></div>
+            </div>
         </div>
         <div class="row">
             <div class="col-12 small-square"></div>
@@ -79,16 +78,25 @@
             </div>
             <div class="col-4">
                 <div class="small-square light-gray"></div>
->>>>>>> Grid-III
-=======
-                <div class="big-square light-gray"></div>
             </div>
+        </div>
+    </section>
+	<section class="container">
+        <h1>Grid Model IV</h1>
+        <div class="row">
+            <div class="col-12">
+                <div class="small-square dark-gray"></div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-4">
                 <div class="big-square light-gray"></div>
             </div>
             <div class="col-4">
                 <div class="big-square light-gray"></div>
->>>>>>> Grid-IV
+            </div>
+            <div class="col-4">
+                <div class="big-square light-gray"></div>
             </div>
         </div>
     </section>
